--- a/style.css
+++ b/style.css
@@ -9,3 +9,12 @@ h2 {
   margin-bottom: 4px;
   color: #0077aa;
 }
+
+#busqueda {
+  width: 100%;
+  padding: 8px;
+  margin: 15px 0;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 16px;
+}
