--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --color-principal: #4fc3f7; /* Azul por defecto */
+  --color-principal: #4fc3f7; /* akzul por defecto */
   --color-fondo: #121212;
   --color-texto: #f5f5f5;
   --color-borde: #333;
